--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
     min-height: 100dvh;
     display: flex;
     flex-direction: column;
+    font-family: Avenir, Verdana, 'Helvetica Neue', sans-serif;
 }
 
 h2 {
@@ -170,6 +171,36 @@ h3 {
 
 .color input[type="checkbox"]:checked[id$="-lock"] + label::before {
     width: 100vw;
+}
+
+.strikes {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+.strikes h3 {
+    grid-column-start: 1;
+    grid-column-end: 5;
+    grid-row-start: 1;
+    grid-row-end: 2;
+}
+
+.strikes input {
+    appearance: none;
+    width: 2.1em;
+    height: 2.1em;
+    background-color: #eee;
+    border-radius: 4px;
+}
+
+.strikes input:checked::before {
+    content: "×";
+    font-size: 2em;
+    font-weight: bold;
+    position: relative;
+    left: 22%;
+    width: 1em;
+    height: 1em;
 }
 
 .scoring {
